--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <div id="navbar" class="gjs-grid-row">
     <div id="navbar-column" class="gjs-grid-column">
       <div id="navbar-wrapper" class="gjs-grid-row">
-        <div id="navcol" class="gjs-grid-column"><img id="i48rvi-2" src="assets/afaztitle.png" alt="afaz Title Logo" />
+        <div id="navcol" class="gjs-grid-column"><img id="i48rvi-2" src="assets/afaztitle.png" alt="afaz Title Logo"/>
         </div>
         <div id="navcol2" class="gjs-grid-column">
           <div id="nav-menu" class="gjs-grid-row">
@@ -76,15 +76,13 @@
   <div id="hero" class="gjs-grid-row">
     <div id="iycz3" class="gjs-grid-column">
       <h1 id="irjua" class="gjs-heading">
-        <strong>Hey! I'm Firdaus </strong><span id="i4jn1p" class="gjs-text-blue"><strong
-            id="i2miy">Zaki</strong></span>
+        <strong>Hey! I'm Firdaus </strong><span id="i4jn1p" class="gjs-text-blue"><strong id="i2miy">Zaki</strong></span>
       </h1>
       <div id="subheader" class="text-main-content">
         <div id="ivuqh">
-          <div id="ivm4u"><span id="iqhf4">An alumnus of MRSM Langkawi, skilled in software development, web
-              development, AI, and
-              electronics, with a strong passion for aerospace. Enjoys integrating complex concepts into cohesive
-              projects and has been honing skills from a young age.</span></div>
+          <div id="ivm4u">
+            <span id="iqhf4">An alumnus of MRSM Langkawi, skilled in software development, web development, AI, and electronics, with a strong passion for aerospace. Enjoys integrating complex concepts into cohesive projects and has been honing skills from a young age.</span>
+          </div>
         </div>
       </div>
       <div id="i2rrg5" class="gjs-grid-row">
@@ -103,10 +101,7 @@
       <div id="customCarousel" data-bs-ride="carousel" class="carousel slide mt-4 gjs-editable d-none d-lg-block">
         <!-- Indicators -->
         <div id="ittgu" class="carousel-indicators gjs-draggable">
-          <button type="button" data-bs-target="#customCarousel" data-bs-slide-to="0" id="i2q0a"
-            class="active">Button</button><button type="button" data-bs-target="#customCarousel"
-            data-bs-slide-to="1">Button</button><button type="button" data-bs-target="#customCarousel"
-            data-bs-slide-to="2">Button</button>
+          <button type="button" data-bs-target="#customCarousel" data-bs-slide-to="0" id="i2q0a" class="active">Button</button><button type="button" data-bs-target="#customCarousel" data-bs-slide-to="1">Button</button><button type="button" data-bs-target="#customCarousel" data-bs-slide-to="2">Button</button>
         </div><!-- Carousel Inner -->
         <div id="ihh53" class="carousel-inner gjs-editable">
           <!-- First Slide -->
@@ -119,12 +114,16 @@
                 </div>
                 <div data-type-role="flex-column" id="isrxh2-2-2" class="gjs-plg-flex-column">
                   <div id="iovv8o-2">
-                    <div id="i9fe2p-2"><strong><span id="iyjge1-2"><span id="i864xq-2">Generative</span> AI NPC Dialogue
-                          System</span></strong></div>
+                    <div id="i9fe2p-2">
+                      <strong><span id="iyjge1-2"><span id="i864xq-2">Generative</span> AI NPC Dialogue System</span></strong>
+                    </div>
                   </div>
                   <div id="if2j14-2">
-                    <div id="iqr1l7-2">Deployed an API server on Render using the FastAPI framework, integrating an AI
-                      for immersive NPC dialogue systems compatible with any game engine.</div>
+                    <div id="iqr1l7-2">
+                      <div>
+                        <span id="i8bb1j">Deployed an API server on Render using the FastAPI framework, integrating an AI for immersive NPC dialogue systems compatible with any game engine.</span>
+                      </div>
+                    </div>
                   </div><button type="button" id="i3lj1-2-2" class="btn btn-primary">View More</button>
                 </div>
               </div>
@@ -142,9 +141,11 @@
                           Controller</span></strong></div>
                   </div>
                   <div id="iryk9n">
-                    <div id="ie2hig">Built a joystick controller using various components found and connected them to an
-                      Arduino Mega 2560. The Arduino communicates with games or software either through JSON or by
-                      simulating assigned keybinds and mouse movements.</div>
+                    <div id="ie2hig">
+                      <div id="i35589">
+                        <span id="iwori5">Built a joystick controller using various components found and connected them to an Arduino Mega 2560. The Arduino communicates with games or software either through JSON or by simulating assigned keybinds and mouse movements.</span>
+                      </div>
+                    </div>
                   </div><button type="button" id="i3lj1-3" class="btn btn-primary">View More</button>
                 </div>
               </div>
@@ -162,44 +163,43 @@
                           Simulation</span></strong></div>
                   </div>
                   <div id="i9j7vc">
-                    <div id="ie3ggj">Developed an Orbital Mechanics simulation in Godot 2D simulating the n-body problem
-                      and the use of the polar equation of 2-body orbits.</div>
+                    <div id="ie3ggj">
+                      <div>
+                        <span id="ia2ush">Developed an Orbital Mechanics simulation in Godot 2D simulating the n-body problem and the use of the polar equation of 2-body orbits.</span>
+                      </div>
+                    </div>
                   </div><button type="button" id="i3lj1" class="btn btn-primary">View More</button>
                 </div>
               </div>
             </div>
           </div>
         </div>
-        <!-- Controls --><button type="button" data-bs-target="#customCarousel" data-bs-slide="prev" id="ietyss"
-          class="carousel-control-prev gjs-draggable"><span id="izg80a"
-            class="carousel-control-prev-icon"></span></button><button type="button" data-bs-target="#customCarousel"
-          data-bs-slide="next" id="ibdjcq" class="carousel-control-next gjs-draggable"><span id="iarkdv"
-            title="mOLVYPUOQ" class="carousel-control-next-icon"></span></button>
+        <!-- Controls --><button type="button" data-bs-target="#customCarousel" data-bs-slide="prev" id="ietyss" class="carousel-control-prev gjs-draggable"><span id="izg80a" class="carousel-control-prev-icon"></span></button><button type="button" data-bs-target="#customCarousel" data-bs-slide="next" id="ibdjcq" class="carousel-control-next gjs-draggable"><span id="iarkdv" title="mOLVYPUOQ" class="carousel-control-next-icon"></span></button>
       </div><!-- Desktop Carousel Ends Here -->
       <!-- Mobile & Tablet Carousel Starts Here -->
       <div id="mobileCardCarousel" class="d-lg-none mt-5">
         <div class="card-carousel-container">
           <div class="card-carousel">
-            <div class="carousel-card">
-              <iframe allowfullscreen
+            <div class="carousel-card" id="irqpac"><iframe allowfullscreen=""
                 src="https://www.youtube.com/embed/g4SFLh9Imq4?&loop=1&playlist=g4SFLh9Imq4"></iframe>
-              <h5>Generative AI NPC Dialogue System</h5>
-              <p>Deployed an API server on Render using FastAPI, integrating AI for immersive NPC dialogues in any game
-                engine.</p>
-              <button class="btn btn-primary">View More</button>
+              <h5 id="iu5kto"><span id="iyulkr">Generative</span> <span id="io00hj">AI NPC Dialogue System</span></h5>
+              <p id="imszhp">
+                <span id="i6g31r">Deployed an API server on Render using FastAPI, integrating AI for immersive NPC dialogues in any game engine.</span>
+              </p><button type="button" class="btn btn-primary">View More</button>
             </div>
-            <div class="carousel-card">
-              <iframe allowfullscreen src="https://www.youtube.com/embed/gpotQWYRFac?"></iframe>
-              <h5>Joystick Controller</h5>
-              <p>Built using components connected to an Arduino Mega. Communicates with software through JSON or keybind
-                simulation.</p>
-              <button class="btn btn-primary">View More</button>
+            <div class="carousel-card"><iframe allowfullscreen=""
+                src="https://www.youtube.com/embed/gpotQWYRFac?"></iframe>
+              <h5 id="iz8541"><span id="ig9tmj">Joystick</span> <span id="i1z4kg">Controller</span></h5>
+              <p id="iv9e8k">
+                <span id="iyaplf">Built using components connected to an Arduino Mega. Communicates with software through JSON or keybind simulation.</span>
+              </p><button type="button" class="btn btn-primary">View More</button>
             </div>
-            <div class="carousel-card">
-              <iframe allowfullscreen src="https://www.youtube.com/embed/k_mOLVYPUOQ?"></iframe>
-              <h5>Orbital Mechanics Simulation</h5>
-              <p>Developed a physics-based orbital simulation using Godot, inspired by Kerbal Space Program.</p>
-              <button class="btn btn-primary">View More</button>
+            <div class="carousel-card" id="if0gkr"><iframe allowfullscreen=""
+                src="https://www.youtube.com/embed/k_mOLVYPUOQ?"></iframe>
+              <h5 id="is52bt"><span id="i5anel">Orbital</span> <span id="ijnegn">Mechanics Simulation</span></h5>
+              <p id="ixinox">
+                <span id="iu5y0c">Developed a physics-based orbital simulation using Godot, inspired by Kerbal Space Program.</span>
+              </p><button type="button" class="btn btn-primary">View More</button>
             </div>
           </div>
         </div>
@@ -226,10 +226,8 @@
           <div data-type-role="flex-column" id="i3mqhw-4-2" class="gjs-plg-flex-column">
             <div id="il0alf-2">
               <div id="iov1wd-2"><span id="i85as3-2"><strong id="ih6i3f-2">SK Seksyen 9 Shah Alam</strong></span></div>
-              <div draggable="true" id="ijyrsh">
-                <span draggable="true" id="ip7cyo-2"><strong draggable="true" id="im4r7c-2">( 2014 - 2019
-                    )</strong></span>
-              </div>
+              <div draggable="true" id="ijyrsh"><span draggable="true" id="ip7cyo-2"><strong draggable="true" id="im4r7c-2">( 2014 - 2019
+                    )</strong></span></div>
             </div>
           </div>
         </div>
@@ -249,8 +247,8 @@
   <div id="footer" class="gjs-grid-row">
     <div id="ilriti" class="gjs-grid-column">
       <div id="im0rle" class="gjs-grid-row">
-        <div id="iotp6j" class="gjs-grid-column"><a href="/" id="iih6cv" class="gjs-link-box"><img id="i48rvi"
-              src="assets/afaztitle.png" alt="afaz Title Logo" /></a></div>
+        <div id="iotp6j" class="gjs-grid-column"><a href="/" id="iih6cv"
+            class="gjs-link-box"><img id="i48rvi" src="assets/afaztitle.png" alt="afaz Title Logo"/></a></div>
         <div id="i1hx7l" class="gjs-grid-column"><a id="ij7g8t" title="" href="##" class="gjs-link">
             <div>Discord</div>
           </a><a id="ipjdtn" href="##" class="gjs-link">
@@ -267,6 +265,8 @@
   </div><!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   &gt;
+
+
 
 
 
