aaaa better responsitivity

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
   <div id="hero" class="gjs-grid-row">
     <div id="iycz3" class="gjs-grid-column">
       <h1 id="irjua" class="gjs-heading">
-        <strong>Hey! I'm Firdaus </strong><span id="i4jn1p" class="gjs-text-blue"><strong id="i2miy">Zaki</strong></span>
+        <strong id="i3s09">Hey! I'm Firdaus </strong><span id="i4jn1p" class="gjs-text-blue"><strong id="i2miy">Zaki</strong></span>
       </h1>
       <div id="subheader" class="text-main-content">
         <div id="ivuqh">
@@ -178,28 +178,28 @@
       </div><!-- Desktop Carousel Ends Here -->
       <!-- Mobile & Tablet Carousel Starts Here -->
       <div id="mobileCardCarousel" class="d-lg-none mt-5">
-        <div class="card-carousel-container">
+        <div id="i37rne" class="card-carousel-container">
           <div class="card-carousel">
-            <div class="carousel-card" id="irqpac"><iframe allowfullscreen=""
+            <div id="irqpac" class="carousel-card"><iframe allowfullscreen=""
                 src="https://www.youtube.com/embed/g4SFLh9Imq4?&loop=1&playlist=g4SFLh9Imq4"></iframe>
               <h5 id="iu5kto"><span id="iyulkr">Generative</span> <span id="io00hj">AI NPC Dialogue System</span></h5>
               <p id="imszhp">
                 <span id="i6g31r">Deployed an API server on Render using FastAPI, integrating AI for immersive NPC dialogues in any game engine.</span>
-              </p><button type="button" class="btn btn-primary">View More</button>
+              </p><button type="button" id="i3fe3t" class="btn btn-primary">View More</button>
             </div>
             <div class="carousel-card"><iframe allowfullscreen=""
                 src="https://www.youtube.com/embed/gpotQWYRFac?"></iframe>
               <h5 id="iz8541"><span id="ig9tmj">Joystick</span> <span id="i1z4kg">Controller</span></h5>
               <p id="iv9e8k">
                 <span id="iyaplf">Built using components connected to an Arduino Mega. Communicates with software through JSON or keybind simulation.</span>
-              </p><button type="button" class="btn btn-primary">View More</button>
+              </p><button type="button" id="ibgysk" class="btn btn-primary">View More</button>
             </div>
-            <div class="carousel-card" id="if0gkr"><iframe allowfullscreen=""
+            <div id="if0gkr" class="carousel-card"><iframe allowfullscreen=""
                 src="https://www.youtube.com/embed/k_mOLVYPUOQ?"></iframe>
               <h5 id="is52bt"><span id="i5anel">Orbital</span> <span id="ijnegn">Mechanics Simulation</span></h5>
               <p id="ixinox">
                 <span id="iu5y0c">Developed a physics-based orbital simulation using Godot, inspired by Kerbal Space Program.</span>
-              </p><button type="button" class="btn btn-primary">View More</button>
+              </p><button type="button" id="iwgidk" class="btn btn-primary">View More</button>
             </div>
           </div>
         </div>
