--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div id="navcol" class="gjs-grid-column"><img id="i48rvi-2" src="assets/afaztitle.png" alt="afaz Title Logo"/>
         </div>
         <div id="navcol2" class="gjs-grid-column">
-          <div id="nav-menu" class="gjs-grid-row">
+          <div id="nav-menu" class="gjs-grid-row d-none d-sm-flex">
             <div id="colnav" class="gjs-grid-column"><a id="i88iz" href="#hero" title="" class="gjs-link">
                 <div id="Text">
                   <div id="isaxis">
