--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <strong id="i0dv3-3">Here are some of my <span id="icxfor-3" class="gjs-text-blue">Past Projects</span></strong>
       </h2>
       <!--Desktop Carousel Starts Here-->
-      <div id="customCarousel-2" data-bs-ride="carousel" class="carousel slide mt-4 gjs-editable d-none d-lg-block">
+      <div id="customCarousel" data-bs-ride="carousel" class="carousel slide mt-4 gjs-editable d-none d-lg-block">
         <!-- Indicators -->
         <div id="ittgu-2" class="carousel-indicators gjs-draggable">
           <button type="button" data-bs-target="#customCarousel" data-bs-slide-to="0" id="i2q0a-2" class="active">Button</button><button type="button" data-bs-target="#customCarousel" data-bs-slide-to="1">Button</button><button type="button" data-bs-target="#customCarousel" data-bs-slide-to="2">Button</button>
