--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
   <div id="navbar-2" class="gjs-grid-row">
     <div id="navbar-column-2" class="gjs-grid-column">
       <div id="navbar-wrapper-2" class="gjs-grid-row">
-        <div id="navcol-2" class="gjs-grid-column"><img id="i48rvi-2-2" src="assets/afaztitle.png" alt="afaz Title Logo"/>
+        <div id="navcol-2" class="gjs-grid-column"><img id="i48rvi-2-2" src="assets/afaztitle.png"
+            alt="afaz Title Logo" />
         </div>
         <div id="navcol2-2" class="gjs-grid-column">
           <div id="nav-menu-2" class="gjs-grid-row d-none d-sm-flex">
@@ -78,12 +79,15 @@
   <div id="hero-2" class="gjs-grid-row">
     <div id="iycz3-2" class="gjs-grid-column">
       <h1 id="irjua-2" class="gjs-heading">
-        <strong id="i3s09-2">Hey! I'm Firdaus </strong><span id="i4jn1p-2" class="gjs-text-blue"><strong id="i2miy-2">Zaki</strong></span>
+        <strong id="i3s09-2">Hey! I'm Firdaus </strong><span id="i4jn1p-2" class="gjs-text-blue"><strong
+            id="i2miy-2">Zaki</strong></span>
       </h1>
       <div id="subheader-2" class="text-main-content">
         <div id="ivuqh-2">
           <div id="ivm4u-2">
-            <span id="iqhf4-2">An alumnus of MRSM Langkawi, skilled in software development, web development, AI, and electronics, with a strong passion for aerospace. Enjoys integrating complex concepts into cohesive projects and has been honing skills from a young age.</span>
+            <span id="iqhf4-2">An alumnus of MRSM Langkawi, skilled in software development, web development, AI, and
+              electronics, with a strong passion for aerospace. Enjoys integrating complex concepts into cohesive
+              projects and has been honing skills from a young age.</span>
           </div>
         </div>
       </div>
@@ -103,7 +107,10 @@
       <div id="customCarousel" data-bs-ride="carousel" class="carousel slide mt-4 gjs-editable d-none d-lg-block">
         <!-- Indicators -->
         <div id="ittgu-2" class="carousel-indicators gjs-draggable">
-          <button type="button" data-bs-target="#customCarousel" data-bs-slide-to="0" id="i2q0a-2" class="active">Button</button><button type="button" data-bs-target="#customCarousel" data-bs-slide-to="1">Button</button><button type="button" data-bs-target="#customCarousel" data-bs-slide-to="2">Button</button>
+          <button type="button" data-bs-target="#customCarousel" data-bs-slide-to="0" id="i2q0a-2"
+            class="active">Button</button><button type="button" data-bs-target="#customCarousel"
+            data-bs-slide-to="1">Button</button><button type="button" data-bs-target="#customCarousel"
+            data-bs-slide-to="2">Button</button>
         </div><!-- Carousel Inner -->
         <div id="ihh53-2" class="carousel-inner gjs-editable">
           <!-- First Slide -->
@@ -117,13 +124,15 @@
                 <div data-type-role="flex-column" id="isrxh2-2-2-2" class="gjs-plg-flex-column">
                   <div id="iovv8o-2-2">
                     <div id="i9fe2p-2-2">
-                      <strong><span id="iyjge1-2-2"><span id="i864xq-2-2">Generative</span> AI NPC Dialogue System</span></strong>
+                      <strong><span id="iyjge1-2-2"><span id="i864xq-2-2">Generative</span> AI NPC Dialogue
+                          System</span></strong>
                     </div>
                   </div>
                   <div id="if2j14-2-2">
                     <div id="iqr1l7-2-2">
                       <div>
-                        <span id="i8bb1j-2">Deployed an API server on Render using the FastAPI framework, integrating an AI for immersive NPC dialogue systems compatible with any game engine.</span>
+                        <span id="i8bb1j-2">Deployed an API server on Render using the FastAPI framework, integrating an
+                          AI for immersive NPC dialogue systems compatible with any game engine.</span>
                       </div>
                     </div>
                   </div><button type="button" id="i3lj1-2-2-2" class="btn btn-primary">View More</button>
@@ -145,7 +154,9 @@
                   <div id="iryk9n-2">
                     <div id="ie2hig-2">
                       <div id="i35589-2">
-                        <span id="iwori5-2">Built a joystick controller using various components found and connected them to an Arduino Mega 2560. The Arduino communicates with games or software either through JSON or by simulating assigned keybinds and mouse movements.</span>
+                        <span id="iwori5-2">Built a joystick controller using various components found and connected
+                          them to an Arduino Mega 2560. The Arduino communicates with games or software either through
+                          JSON or by simulating assigned keybinds and mouse movements.</span>
                       </div>
                     </div>
                   </div><button type="button" id="i3lj1-3-2" class="btn btn-primary">View More</button>
@@ -167,7 +178,8 @@
                   <div id="i9j7vc-2">
                     <div id="ie3ggj-2">
                       <div>
-                        <span id="ia2ush-2">Developed an Orbital Mechanics simulation in Godot 2D simulating the n-body problem and the use of the polar equation of 2-body orbits.</span>
+                        <span id="ia2ush-2">Developed an Orbital Mechanics simulation in Godot 2D simulating the n-body
+                          problem and the use of the polar equation of 2-body orbits.</span>
                       </div>
                     </div>
                   </div><button type="button" id="i3lj1-2" class="btn btn-primary">View More</button>
@@ -176,7 +188,11 @@
             </div>
           </div>
         </div>
-        <!-- Controls --><button type="button" data-bs-target="#customCarousel" data-bs-slide="prev" id="ietyss-2" class="carousel-control-prev gjs-draggable"><span id="izg80a-2" class="carousel-control-prev-icon"></span></button><button type="button" data-bs-target="#customCarousel" data-bs-slide="next" id="ibdjcq-2" class="carousel-control-next gjs-draggable"><span id="iarkdv-2" title="mOLVYPUOQ" class="carousel-control-next-icon"></span></button>
+        <!-- Controls --><button type="button" data-bs-target="#customCarousel" data-bs-slide="prev" id="ietyss-2"
+          class="carousel-control-prev gjs-draggable"><span id="izg80a-2"
+            class="carousel-control-prev-icon"></span></button><button type="button" data-bs-target="#customCarousel"
+          data-bs-slide="next" id="ibdjcq-2" class="carousel-control-next gjs-draggable"><span id="iarkdv-2"
+            title="mOLVYPUOQ" class="carousel-control-next-icon"></span></button>
       </div><!-- Desktop Carousel Ends Here -->
       <!-- Mobile & Tablet Carousel Starts Here -->
       <div id="mobileCardCarousel-2" class="d-lg-none mt-5">
@@ -187,21 +203,24 @@
               <h5 id="iu5kto-2"><span id="iyulkr-2">Generative</span> <span id="io00hj-2">AI NPC Dialogue System</span>
               </h5>
               <p id="imszhp-2">
-                <span id="i6g31r-2">Deployed an API server on Render using FastAPI, integrating AI for immersive NPC dialogues in any game engine.</span>
+                <span id="i6g31r-2">Deployed an API server on Render using FastAPI, integrating AI for immersive NPC
+                  dialogues in any game engine.</span>
               </p><button type="button" id="i3fe3t-2" class="btn btn-primary">View More</button>
             </div>
             <div class="carousel-card"><iframe allowfullscreen=""
                 src="https://www.youtube.com/embed/gpotQWYRFac?"></iframe>
               <h5 id="iz8541-2"><span id="ig9tmj-2">Joystick</span> <span id="i1z4kg-2">Controller</span></h5>
               <p id="iv9e8k-2">
-                <span id="iyaplf-2">Built using components connected to an Arduino Mega. Communicates with software through JSON or keybind simulation.</span>
+                <span id="iyaplf-2">Built using components connected to an Arduino Mega. Communicates with software
+                  through JSON or keybind simulation.</span>
               </p><button type="button" id="ibgysk-2" class="btn btn-primary">View More</button>
             </div>
             <div id="if0gkr-2" class="carousel-card"><iframe allowfullscreen=""
                 src="https://www.youtube.com/embed/k_mOLVYPUOQ?"></iframe>
               <h5 id="is52bt-2"><span id="i5anel-2">Orbital</span> <span id="ijnegn-2">Mechanics Simulation</span></h5>
               <p id="ixinox-2">
-                <span id="iu5y0c-2">Developed a physics-based orbital simulation using Godot, inspired by Kerbal Space Program.</span>
+                <span id="iu5y0c-2">Developed a physics-based orbital simulation using Godot, inspired by Kerbal Space
+                  Program.</span>
               </p><button type="button" id="iwgidk-2" class="btn btn-primary">View More</button>
             </div>
           </div>
@@ -212,7 +231,8 @@
   <div id="education-2" class="gjs-grid-row">
     <div id="i8w4i-2-2" class="gjs-grid-column">
       <h4 id="ihs4lb-2-2" class="gjs-heading gjs-text-blue"><strong id="i2t6em-2">Education</strong></h4>
-      <h2 id="iiacm-2-2" class="gjs-heading"><strong id="i0dv3-2-2">Below is an overview of my <span id="ihw7e5-2">Formal
+      <h2 id="iiacm-2-2" class="gjs-heading"><strong id="i0dv3-2-2">Below is an overview of my <span
+            id="ihw7e5-2">Formal
           </span><span id="icxfor-2-2" class="gjs-text-blue">Education</span></strong></h2>
       <div id="iac6f-3" class="carousel-content">
         <div data-type-role="flex-row" id="iw7afe-2" class="gjs-plg-flex-row">
@@ -220,7 +240,8 @@
             <div id="il0alf-3">
               <div id="iov1wd-3"><span id="ifzbe4-2"><strong id="ipot2i-2">Schule Höchi Dättwil</strong></span></div>
               <div draggable="true" id="ijal46-2">
-                <span draggable="true" id="ip7cyo-3"><strong draggable="true" id="im4r7c-3">( 2011 - 2013 )</strong></span>
+                <span draggable="true" id="ip7cyo-3"><strong draggable="true" id="im4r7c-3">( 2011 - 2013
+                    )</strong></span>
               </div>
             </div>
           </div>
@@ -230,7 +251,8 @@
             <div id="il0alf-2-2">
               <div id="iov1wd-2-2"><span id="i85as3-2-2"><strong id="ih6i3f-2-2">SK Seksyen 9 Shah Alam</strong></span>
               </div>
-              <div draggable="true" id="ijyrsh-2"><span draggable="true" id="ip7cyo-2-2"><strong draggable="true" id="im4r7c-2-2">( 2014 - 2019
+              <div draggable="true" id="ijyrsh-2"><span draggable="true" id="ip7cyo-2-2"><strong draggable="true"
+                    id="im4r7c-2-2">( 2014 - 2019
                     )</strong></span></div>
             </div>
           </div>
@@ -240,7 +262,8 @@
             <div id="i07hta-2">
               <div id="idcp5i-2"><span id="ignmm5-2"><strong id="iw1l7b-2">MRSM Langkawi</strong></span></div>
               <div draggable="true" id="ikqbj6-2">
-                <span draggable="true" id="iq3im1-2"><strong draggable="true" id="i4l4ob-2">( 2020 - 2024 )</strong></span>
+                <span draggable="true" id="iq3im1-2"><strong draggable="true" id="i4l4ob-2">( 2020 - 2024
+                    )</strong></span>
               </div>
             </div>
           </div>
@@ -251,8 +274,8 @@
   <div id="footer-2" class="gjs-grid-row">
     <div id="ilriti-2" class="gjs-grid-column">
       <div id="im0rle-2" class="gjs-grid-row">
-        <div id="iotp6j-2" class="gjs-grid-column"><a href="/" id="iih6cv-2"
-            class="gjs-link-box"><img id="i48rvi-3" src="assets/afaztitle.png" alt="afaz Title Logo"/></a></div>
+        <div id="iotp6j-2" class="gjs-grid-column"><a href="/" id="iih6cv-2" class="gjs-link-box"><img id="i48rvi-3"
+              src="assets/afaztitle.png" alt="afaz Title Logo" /></a></div>
         <div id="i1hx7l-2" class="gjs-grid-column"><a id="ij7g8t-2" title="" href="##" class="gjs-link">
             <div>Discord</div>
           </a><a id="ipjdtn-2" href="##" class="gjs-link">
