i hope this works

--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
         <!-- Indicators -->
         <div id="ittgu-2" class="carousel-indicators gjs-draggable">
           <button type="button" data-bs-target="#customCarousel" data-bs-slide-to="0" id="i2q0a-2"
-            class="active">Button</button><button type="button" data-bs-target="#customCarousel"
-            data-bs-slide-to="1">Button</button><button type="button" data-bs-target="#customCarousel"
-            data-bs-slide-to="2">Button</button>
+            class="active"></button><button type="button" data-bs-target="#customCarousel"
+            data-bs-slide-to="1"></button><button type="button" data-bs-target="#customCarousel"
+            data-bs-slide-to="2"></button>
         </div><!-- Carousel Inner -->
         <div id="ihh53-2" class="carousel-inner gjs-editable">
           <!-- First Slide -->
