--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
   </section>
 
   <!-- Skills Section -->
-  <section id="education">
+  <section id="skills">
     <div class="section-container">
       <h4 class="section-subtitle text-blue"><strong>Skills</strong></h4>
       <h2 class="section-title"><strong>Below is an overview of my <span class="text-blue">Skills</span></strong></h2>
