--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <a href="#education" class="nav-link">Skills</a>
         </div>
         <div class="nav-cta">
-          <a href="#contact" class="btn-primary">Contact Me</a>
+          <a href="#contacts" class="btn-primary">Contact Me</a>
         </div>
       </div>
     </div>
@@ -212,6 +212,14 @@
       </div>
     </div>
   </section>
+
+  <!-- Contacts Section -->
+   <section id="contacts">
+    <div class="section-container">
+      <h4 class="section-subtitle text-blue"><strong>Contacts</strong></h4>
+      <h2 class="section-title"><strong>My personal <span class="text-blue">Contacts</span></strong></h2>
+    </div>
+   </section>
 
   <!-- Footer -->
   <footer id="footer">
