--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <title>AFAZ | Portfolio</title>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="utf-8" >
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="index,follow" />
     <meta name="description" content="An alumnus of MRSM Langkawi, skilled in software development, web development, AI, and electronics, with a strong passion for aerospace." />
     <meta name="keywords" content="Afaz, Portfolio, Arclas, Developer, Afaz07, Hub, Firdaus, Zaki, Firdaus Zaki Portfolio" />
