--- a/index.html
+++ b/index.html
@@ -4,31 +4,31 @@
     <title>AFAZ | Portfolio</title>
     <meta charset="utf-8" >
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="robots" content="index,follow" />
-    <meta name="description" content="An alumnus of MRSM Langkawi, skilled in software development, web development, AI, and electronics, with a strong passion for aerospace." />
-    <meta name="keywords" content="Afaz, Portfolio, Arclas, Developer, Afaz07, Hub, Firdaus, Zaki, Firdaus Zaki Portfolio" />
+    <meta name="robots" content="index,follow" >
+    <meta name="description" content="An alumnus of MRSM Langkawi, skilled in software development, web development, AI, and electronics, with a strong passion for aerospace." >
+    <meta name="keywords" content="Afaz, Portfolio, Arclas, Developer, Afaz07, Hub, Firdaus, Zaki, Firdaus Zaki Portfolio" >
 
     <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://www.firdauszaki.com/" />
-    <meta property="og:site_name" content="AFAZ | Portfolio" />
-    <meta property="og:title" content="AFAZ | Portfolio" />
-    <meta property="og:description" content="An alumnus of MRSM Langkawi, skilled in software development, web development, AI, and electronics, with a strong passion for aerospace." />
-    <meta property="og:image" content="https://www.firdauszaki.com/preview.jpg" />
+    <meta property="og:type" content="website" >
+    <meta property="og:url" content="https://www.firdauszaki.com/" >
+    <meta property="og:site_name" content="AFAZ | Portfolio" >
+    <meta property="og:title" content="AFAZ | Portfolio" >
+    <meta property="og:description" content="An alumnus of MRSM Langkawi, skilled in software development, web development, AI, and electronics, with a strong passion for aerospace." >
+    <meta property="og:image" content="https://www.firdauszaki.com/preview.jpg" >
 
     <!-- Twitter -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="AFAZ | Portfolio" />
-    <meta name="twitter:description" content="An alumnus of MRSM Langkawi, skilled in software development, web development, AI, and electronics." />
-    <meta name="twitter:image" content="https://www.firdauszaki.com/preview.jpg" />
+    <meta name="twitter:card" content="summary_large_image" >
+    <meta name="twitter:title" content="AFAZ | Portfolio" >
+    <meta name="twitter:description" content="An alumnus of MRSM Langkawi, skilled in software development, web development, AI, and electronics." >
+    <meta name="twitter:image" content="https://www.firdauszaki.com/preview.jpg" >
 
     <!-- Theme -->
-    <meta name="theme-color" content="#5797ff" />
-    <link rel="icon" href="/favicon.ico" />
+    <meta name="theme-color" content="#5797ff" >
+    <link rel="icon" href="/favicon.ico" >
 
     <!-- Stylesheets -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./style.css" >
   </head>
 
   <body>
@@ -37,7 +37,7 @@
       <div class="navbar-container">
         <div class="navbar-wrapper">
           <div class="nav-logo">
-            <img src="assets/afaztitle.png" alt="AFAZ Title Logo" />
+            <img src="assets/afaztitle.png" alt="AFAZ Title Logo" >
           </div>
           <div class="nav-menu d-none d-sm-flex">
             <a href="#hero" class="nav-link">About</a>
@@ -265,7 +265,7 @@
         <div class="footer-content">
           <div class="footer-logo">
             <a href="/">
-              <img src="assets/afaztitle.png" alt="AFAZ Title Logo" />
+              <img src="assets/afaztitle.png" alt="AFAZ Title Logo" >
             </a>
           </div>
           <div class="footer-links"></div>
