--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
             <h1>Whatsapp</h1>
             <h1>Messaging only please</h1>
             <div class="hero-cta">
-              <a href="https://wa.me/60199261201" class="btn-primary">+6019-9261201</a>
+              <a href="https://wa.me/60199261201" class="btn-primary" target="_blank" rel="noopener noreferrer">+6019-9261201</a>
             </div>
           </div>
 
@@ -244,7 +244,7 @@
             <h1>Discord</h1>
             <h1>Most Active</h1>
             <div class="hero-cta">
-              <a href="https://discord.com/users/afaz_dev" class="btn-primary">afaz_dev</a>
+              <a href="https://discord.com/users/afaz_dev" class="btn-primary" target="_blank" rel="noopener noreferrer">afaz_dev</a>
             </div>
           </div>
 
@@ -252,7 +252,7 @@
             <h1>Instagram</h1>
             <h1>Instagram Account</h1>
             <div class="hero-cta">
-              <a href="https://www.instagram.com/firdaus_afaz" class="btn-primary">@firdaus_afaz</a>
+              <a href="https://www.instagram.com/firdaus_afaz" class="btn-primary" target="_blank" rel="noopener noreferrer">@firdaus_afaz</a>
             </div>
           </div>
         </div>
