--- a/index.html
+++ b/index.html
@@ -201,19 +201,19 @@
               <div class="carousel-card">
                 <div class="skill-icon"></div>
                 <h5><span class="text-blue">Roblox</span> Studio</h5>
-                <p>Deployed an API server on Render using FastAPI, integrating AI for immersive NPC dialogues in any game engine.</p>
+                <p>Since 2019.</p>
               </div>
 
               <div class="carousel-card">
                 <div class="skill-icon"></div>
                 <h5><span class="text-purple">Discord Bot</span> Development</h5>
-                <p>Built using components connected to an Arduino Mega. Communicates with software through JSON or keybind simulation.</p>
+                <p>Since 2021</p>
               </div>
 
               <div class="carousel-card">
                 <div class="skill-icon"></div>
                 <h5><span class="text-light-blue">Godot 4</span> 2D &amp; 3D</h5>
-                <p>Built using components connected to an Arduino Mega. Communicates with software through JSON or keybind simulation.</p>
+                <p>Since 2021.</p>
               </div>
             </div>
           </div>
