--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" >
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="index,follow" >
-    <meta name="description" content="An alumnus of MRSM Langkawi, skilled in software development, web development, AI, and electronics, with a strong passion for aerospace." >
+    <meta name="description" content="I'm an 18 year old developer and a university student from Malaysia. My timezone is GMT+8." >
     <meta name="keywords" content="Afaz, Portfolio, Arclas, Developer, Afaz07, Hub, Firdaus, Zaki, Firdaus Zaki Portfolio" >
 
     <!-- Open Graph / Facebook -->
@@ -13,13 +13,13 @@
     <meta property="og:url" content="https://www.firdauszaki.com/" >
     <meta property="og:site_name" content="AFAZ | Portfolio" >
     <meta property="og:title" content="AFAZ | Portfolio" >
-    <meta property="og:description" content="An alumnus of MRSM Langkawi, skilled in software development, web development, AI, and electronics, with a strong passion for aerospace." >
+    <meta property="og:description" content="I'm an 18 year old developer and a university student from Malaysia. My timezone is GMT+8." >
     <meta property="og:image" content="https://www.firdauszaki.com/preview.jpg" >
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" >
     <meta name="twitter:title" content="AFAZ | Portfolio" >
-    <meta name="twitter:description" content="An alumnus of MRSM Langkawi, skilled in software development, web development, AI, and electronics." >
+    <meta name="twitter:description" content="I'm an 18 year old developer and a university student from Malaysia. My timezone is GMT+8." >
     <meta name="twitter:image" content="https://www.firdauszaki.com/preview.jpg" >
 
     <!-- Theme -->
@@ -58,7 +58,7 @@
           <strong>Hey! I'm Firdaus </strong>
           <span class="text-blue">Zaki</span>
         </h1>
-        <p class="hero-description">I'm a developer and a university student. My timezone is GMT+8.</p>
+        <p class="hero-description">I'm an 18 year old developer and a university student from Malaysia. My timezone is GMT+8.</p>
         <div class="hero-cta">
           <a href="#past-projects" class="btn-primary">See My Projects</a>
         </div>
