--- a/index.html
+++ b/index.html
@@ -215,6 +215,12 @@
                 <h5><span class="text-light-blue">Godot 4</span> 2D &amp; 3D</h5>
                 <p>Since 2021.</p>
               </div>
+
+              <div class="carousel-card">
+                <div class="skill-icon"></div>
+                <h5><span class="text-green">Web</span> Development</h5>
+                <p>Since 2021.</p>
+              </div>
             </div>
           </div>
         </div>
@@ -268,7 +274,7 @@
               <img src="assets/afaztitle.png" alt="AFAZ Title Logo" >
             </a>
           </div>
-          <div class="footer-links"></div>
+          <div class="footer-links">Made with ❤️ by Firdaus Zaki [ aka Afaz ]</div>
         </div>
       </div>
     </footer>
