--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
             <h1>Discord</h1>
             <h1>Most Active</h1>
             <div class="hero-cta">
-              <a href="https://discord.com/users/afaz_dev" class="btn-primary" target="_blank" rel="noopener noreferrer">afaz_dev</a>
+              <a href="https://discord.com/users/afaz_dev" class="btn-primary" target="_blank" rel="noopener noreferrer">@afaz_dev</a>
             </div>
           </div>
 
