--- a/index.html
+++ b/index.html
@@ -238,23 +238,23 @@
         </h2>
 
         <div class="gjs-plg-flex-row">
-          <div class="gjs-plg-flex-column" id="i8y47n">
+          <div class="gjs-plg-flex-column" id="whatsapp-bg">
             <h1>Whatsapp</h1>
-            <h1>Messaging only please</h1>
+            <h1>Most active anytime. Messaging only please</h1>
             <div class="hero-cta">
               <a href="https://wa.me/60199261201" class="btn-primary" target="_blank" rel="noopener noreferrer">+6019-9261201</a>
             </div>
           </div>
 
-          <div class="gjs-plg-flex-column" id="ijf1ls">
+          <div class="gjs-plg-flex-column" id="discord-bg">
             <h1>Discord</h1>
-            <h1>Most Active</h1>
+            <h1>Most Active when on weekends</h1>
             <div class="hero-cta">
               <a href="https://discord.com/users/afaz_dev" class="btn-primary" target="_blank" rel="noopener noreferrer">@afaz_dev</a>
             </div>
           </div>
 
-          <div class="gjs-plg-flex-column" id="irsf52">
+          <div class="gjs-plg-flex-column" id="instagram-bg">
             <h1>Instagram</h1>
             <h1>Instagram Account</h1>
             <div class="hero-cta">
