--- a/index.html
+++ b/index.html
@@ -229,41 +229,62 @@
 
     <!-- Contacts Section -->
     <section id="contacts">
-      <div class="section-container">
-        <h4 class="section-subtitle text-blue">
-          <strong>Contacts</strong>
-        </h4>
-        <h2 class="section-title">
-          <strong>My personal <span class="text-blue">Contacts</span></strong>
-        </h2>
+  <div class="section-container">
+    <h4 class="section-subtitle text-blue">
+      <strong>Contacts</strong>
+    </h4>
+    <h2 class="section-title">
+      <strong>My personal <span class="text-blue">Contacts</span></strong>
+    </h2>
 
-        <div class="gjs-plg-flex-row">
-          <div class="gjs-plg-flex-column" id="whatsapp-bg">
-            <h1>Whatsapp</h1>
-            <h1>Most active anytime. Messaging only please</h1>
-            <div class="hero-cta">
-              <a href="https://wa.me/60199261201" class="btn-primary" target="_blank" rel="noopener noreferrer">+6019-9261201</a>
-            </div>
-          </div>
-
-          <div class="gjs-plg-flex-column" id="discord-bg">
-            <h1>Discord</h1>
-            <h1>Most Active when on weekends</h1>
-            <div class="hero-cta">
-              <a href="https://discord.com/users/afaz_dev" class="btn-primary" target="_blank" rel="noopener noreferrer">@afaz_dev</a>
-            </div>
-          </div>
-
-          <div class="gjs-plg-flex-column" id="instagram-bg">
-            <h1>Instagram</h1>
-            <h1>Instagram Account</h1>
-            <div class="hero-cta">
-              <a href="https://www.instagram.com/firdaus_afaz" class="btn-primary" target="_blank" rel="noopener noreferrer">@firdaus_afaz</a>
-            </div>
-          </div>
+    <div class="gjs-plg-flex-row">
+      <!-- WhatsApp -->
+      <div class="gjs-plg-flex-column" id="whatsapp-bg">
+        <h1>
+          <!-- WhatsApp SVG -->
+          <svg xmlns="http://www.w3.org/2000/svg" fill="#25D366" viewBox="0 0 24 24" width="28" height="28" style="vertical-align:middle; margin-right:8px;">
+            <path d="M12.004 2.002c-5.523 0-10 4.478-10 10 0 1.77.463 3.496 1.341 5.011L2 22l5.157-1.33A9.945 9.945 0 0 0 12.004 22c5.523 0 10-4.478 10-10s-4.477-9.998-10-9.998zm0 18.143a8.11 8.11 0 0 1-4.14-1.131l-.297-.176-3.064.79.818-2.99-.195-.307a8.078 8.078 0 0 1-1.23-4.33 8.14 8.14 0 1 1 8.108 8.144zm4.418-5.749c-.242-.121-1.432-.707-1.655-.787-.223-.082-.385-.121-.547.121-.16.242-.628.787-.771.951-.143.162-.283.182-.525.061-.242-.121-1.022-.377-1.947-1.2-.72-.642-1.206-1.437-1.347-1.679-.143-.242-.015-.373.106-.494.109-.107.242-.277.363-.415.121-.137.162-.242.242-.404.08-.162.04-.303-.02-.424-.061-.121-.547-1.317-.75-1.803-.197-.474-.398-.408-.547-.415-.143-.007-.303-.009-.465-.009-.162 0-.424.061-.646.303-.223.242-.85.83-.85 2.022s.87 2.349.99 2.51c.121.162 1.708 2.612 4.145 3.662.58.25 1.033.399 1.386.512.582.185 1.11.159 1.528.096.467-.07 1.432-.586 1.633-1.152.201-.566.201-1.05.14-1.152-.061-.101-.222-.161-.464-.283z"/>
+          </svg>
+          Whatsapp
+        </h1>
+        <h1>Most active anytime. Messaging only please</h1>
+        <div class="hero-cta">
+          <a href="https://wa.me/60199261201" class="btn-primary" target="_blank" rel="noopener noreferrer">+6019-9261201</a>
         </div>
       </div>
-    </section>
+
+      <!-- Discord -->
+      <div class="gjs-plg-flex-column" id="discord-bg">
+        <h1>
+          <!-- Discord SVG -->
+          <svg xmlns="http://www.w3.org/2000/svg" fill="#5865F2" viewBox="0 0 24 24" width="28" height="28" style="vertical-align:middle; margin-right:8px;">
+            <path d="M20.317 4.369a19.791 19.791 0 0 0-4.885-1.515.074.074 0 0 0-.079.037c-.211.375-.444.864-.608 1.25a18.626 18.626 0 0 0-5.587 0 12.37 12.37 0 0 0-.617-1.25.077.077 0 0 0-.079-.037 19.736 19.736 0 0 0-4.885 1.515.07.07 0 0 0-.032.028C1.579 9.063.922 13.58 1.21 18.057a.083.083 0 0 0 .031.056 19.9 19.9 0 0 0 5.993 3.036.078.078 0 0 0 .084-.028c.462-.63.874-1.295 1.226-1.994a.076.076 0 0 0-.041-.104 12.321 12.321 0 0 1-1.773-.848.076.076 0 0 1-.008-.126c.12-.09.24-.183.354-.277a.074.074 0 0 1 .078-.01c3.725 1.7 7.767 1.7 11.449 0a.074.074 0 0 1 .079.009c.114.094.234.188.355.278a.076.076 0 0 1-.006.126 11.736 11.736 0 0 1-1.774.847.076.076 0 0 0-.04.105c.36.698.772 1.363 1.226 1.993a.077.077 0 0 0 .084.029 19.876 19.876 0 0 0 6.002-3.036.077.077 0 0 0 .03-.055c.5-8.197-.838-12.671-3.548-13.66a.061.061 0 0 0-.032-.008ZM8.02 15.331c-1.182 0-2.157-1.086-2.157-2.419 0-1.333.955-2.419 2.157-2.419 1.211 0 2.176 1.096 2.157 2.419 0 1.333-.955 2.419-2.157 2.419Zm7.974 0c-1.182 0-2.157-1.086-2.157-2.419 0-1.333.955-2.419 2.157-2.419 1.211 0 2.176 1.096 2.157 2.419 0 1.333-.946 2.419-2.157 2.419Z"/>
+          </svg>
+          Discord
+        </h1>
+        <h1>Most Active when on weekends</h1>
+        <div class="hero-cta">
+          <a href="https://discord.com/users/afaz_dev" class="btn-primary" target="_blank" rel="noopener noreferrer">@afaz_dev</a>
+        </div>
+      </div>
+
+      <!-- Instagram -->
+      <div class="gjs-plg-flex-column" id="instagram-bg">
+        <h1>
+          <!-- Instagram SVG -->
+          <svg xmlns="http://www.w3.org/2000/svg" fill="#E4405F" viewBox="0 0 24 24" width="28" height="28" style="vertical-align:middle; margin-right:8px;">
+            <path d="M7.5 2C4.462 2 2 4.462 2 7.5v9C2 19.538 4.462 22 7.5 22h9c3.038 0 5.5-2.462 5.5-5.5v-9C22 4.462 19.538 2 16.5 2h-9zm9 1.5c2.209 0 4 1.791 4 4v9c0 2.209-1.791 4-4 4h-9c-2.209 0-4-1.791-4-4v-9c0-2.209 1.791-4 4-4h9zm-4.5 3a5.5 5.5 0 1 0 0 11 5.5 5.5 0 0 0 0-11zm0 1.5a4 4 0 1 1 0 8 4 4 0 0 1 0-8zm5.25-.75a1.125 1.125 0 1 0 0 2.25 1.125 1.125 0 0 0 0-2.25z"/>
+          </svg>
+          Instagram
+        </h1>
+        <h1>Instagram Account</h1>
+        <div class="hero-cta">
+          <a href="https://www.instagram.com/firdaus_afaz" class="btn-primary" target="_blank" rel="noopener noreferrer">@firdaus_afaz</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
     <!-- Footer -->
     <footer id="footer">
