--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
           </svg>
           Whatsapp
         </h1>
-        <h1>Most active anytime. Messaging only please</h1>
+        <h1>Most active anytime. Texting only please</h1>
         <div class="hero-cta">
           <a href="https://wa.me/60199261201" class="btn-primary" target="_blank" rel="noopener noreferrer">+6019-9261201</a>
         </div>
@@ -262,7 +262,7 @@
           </svg>
           Discord
         </h1>
-        <h1>Most Active when on weekends</h1>
+        <h1>Most active when on the weekends</h1>
         <div class="hero-cta">
           <a href="https://discord.com/users/afaz_dev" class="btn-primary" target="_blank" rel="noopener noreferrer">@afaz_dev</a>
         </div>
@@ -277,7 +277,7 @@
           </svg>
           Instagram
         </h1>
-        <h1>Instagram Account</h1>
+        <h1>My Instagram Account</h1>
         <div class="hero-cta">
           <a href="https://www.instagram.com/firdaus_afaz" class="btn-primary" target="_blank" rel="noopener noreferrer">@firdaus_afaz</a>
         </div>
